2007-05-04  Denis Washington  <denisw@svn.gnome.org>

	* appearance.glade: Change tab order; Desktop now comes before Fonts.

2007-05-04  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* appearance-font.c:
	* appearance-font.h:
	* appearance-main.c: (init_appearance_data), (main):
	* appearance.glade:
	* appearance.h:
	* subpixel-bgr.png:
	* subpixel-rgb.png:
	* subpixel-vbgr.png:
	* subpixel-vrgb.png:

	add implementation for fonts tab

2007-05-04  Thomas Wood  <thos@gnome.org>

	* appearance-desktop.c: (wp_add_images), (wp_dragged_image),
	(desktop_init):
	* appearance-main.c: (main):
	* appearance-themes.c: (themes_init):
	* appearance-ui.c: (set_toolbar_style), (set_have_icons),
	(ui_init):
	* appearance.h:
	Remove WID() macro, which has an incompatible definition in capplet-utils.h

2007-05-04  Thomas Wood  <thos@gnome.org>

	* appearance-themes.c: (themes_init): Use readable name rather than file name
	in themes list

2007-05-03  Denis Washington  <denisw@svn.gnome.org>

	* appearance-desktop.c: (wp_tree_delete_event): Fixed a leak.

2007-05-03  Denis Washington  <denisw@svn.gnome.org>

	* appearance.h:
	* appearance-desktop.c:
	Ported Jens Granseuer's patch for bug #332810 to the appearance capplet
	and applied it.


2007-05-02  Jens Granseuer  <jensgr@gmx.net>

	* appearance-ui.c: (toolbar_detachable_cb), (ui_init): use proper
	GConf notification instead of hand-picking the correct signal for
	detachable toolbar

2007-05-02  Denis Washington  <denisw@svn.gnome.org>

	* Makefile.am: fizz says: don't indent with spaces in Makefile.am.
	* ChangeLog: I say: don't do so in ChangeLog either.

2007-05-02  Denis Washington  <denisw@svn.gnome.org>

	* appearance-desktop.c: Added drag and drop, re-enabled the watch cursor
	when adding images, and removed some commented out code.

2007-05-02  Denis Washington  <denisw@svn.gnome.org>

	* appearance-desktop.[ch]: Corrected copyright notice authors.

2007-05-01  Denis Washington  <denisw@svn.gnome.org>
