@@ -169,7 +169,7 @@
                         <property name="visible">True</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                         <property name="xalign">0</property>
-                        <property name="label" translatable="yes">Window Borders:</property>
+                        <property name="label" translatable="yes">Window borders:</property>
                       </widget>
                       <packing>
                         <property name="top_attach">1</property>
